# ptcg-ai-battle-challenge-simulation

./: .gitattributes  .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
configs/: baseline.yaml
docs/: data_notes.md  experiment_log.md  submission_notes.md
experiments/: 000-baseline.md  001-generic-abomasnow.md  002-generic-abomasnow-entryfix.md  003-crustle-wall.md  004-crustle-specific.md  005-lucario-tempo.md  006-lucario-full-policy.md  007-strongstart-lucario.md  008-strongstart-retuned.md  009-resubmit-lucario-full.md  010-resubmit-crustle-specific.md  011-final-strongstart-retuned.md  012-roman-v7-guarded.md  013-lucario-search-915.md  014-yaroslav-lucario-v2.md  015-latest-two-guard-strongstart.md  016-latest-two-guard-lucario-full.md  017-maktha-1084-baseline.md  018-reroll-lucario-full.md  019-reroll-strongstart-retuned.md  020-reroll-crustle-specific.md  021-final-lucario-full.md  022-guard-lucario-full-reroll.md  023-crustle-specific-high-diversity-reroll.md  024-alakazam-psychic-control.md  025-final-latest-two-strongstart-guard.md  026-final-latest-two-lucario-full-guard.md  027-roman-v10-strong-start-baseline.md  028-naoto-hop-alakazam-target.md  029-lucario-search-915-reroll.md  030-crustle-specific-guard-reroll.md  031-final-crustle-specific-guard.md  032-naoto-hop-alakazam-target-reroll.md  033-lucario-search-915-guard-reroll.md  034-strongstart-retuned-guard-probe.md  035-crustle-specific-latest-two-guard.md  036-final-naoto-hop-alakazam-guard.md  037-naoto-hop-alakazam-refreshed-guard.md  038-kokinn-diary-day3-il-rerank.md  (+33 more)
(+19 files in other folders)
